--- a/html/index.html
+++ b/html/index.html
@@ -459,6 +459,6 @@
     </footer>
 
     <!-- Main JavaScript -->
-    <script src="../js/main.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
